--- a/src/styles/ChatMessage.module.scss
+++ b/src/styles/ChatMessage.module.scss
@@ -1,23 +1,26 @@
+$marginBottom: 5px;
+
 .wrapper {
-  background-color: var(--color-secondary);
-  margin: 6px 10px;
-  padding: 2px 5px;
-  border-radius: 10px 10px 10px 0;
-
-  align-self: flex-start;
-
-  &:last-child {
-    border-bottom: 6px solid var(--color-body); // Simulates margin due to problems across browsers
-    border-bottom-right-radius: 13px;
-  }
-}
-
-.received {
+  max-width: 55%;
   background-color: var(--color-primary);
+  margin: $marginBottom 10px 0;
+  padding: 2px 5px;
   border-radius: 10px 10px 0;
   align-self: flex-end;
 
   &:last-child {
-    border-bottom-left-radius: 13px;
+    border-bottom: $marginBottom solid var(--color-body); // Simulates margin due to problems across browsers
+    border-bottom-left-radius: 16px;
+  }
+}
+
+.received {
+  background-color: var(--color-secondary);
+  border-radius: 10px 10px 10px 0;
+  align-self: flex-start;
+
+  &:last-child {
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 16px;
   }
 }
