--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,6 +6,7 @@
   --color-primary: #e6e1d6;
   --color-secondary: #d4cec4;
   --color-tertiary: ##808080;
+  --color-link: #05b4eb;
 
   --font-xs: 1.2rem;
   --font-s: 1.4rem;
