--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,7 +6,7 @@
   --color-primary: #e6e1d6;
   --color-secondary: #d4cec4;
   --color-tertiary: ##808080;
-  --color-link: #05b4eb;
+  --color-link: #0498c7;
 
   --font-xs: 1.2rem;
   --font-s: 1.4rem;
@@ -27,6 +27,12 @@
     --color-primary: #353535;
     --color-secondary: #4b4944;
     --color-tertiary: #d3d3d3;
+  }
+}
+
+@supports (-webkit-overflow-scrolling: touch) {
+  input {
+    font-size: 16px;
   }
 }
 
