--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -31,7 +31,8 @@
 }
 
 @supports (-webkit-overflow-scrolling: touch) {
-  input {
+  input,
+  textarea {
     font-size: 16px;
   }
 }
@@ -46,13 +47,14 @@ html,
 body,
 #root {
   height: 100%;
+  touch-action: none;
 }
 
 html {
   position: fixed;
   width: 100%;
   font-family: 'Montserrat', sans-serif;
-  font-size: 56.25%;
+  font-size: 62.5%;
 }
 
 body {
