--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,6 +6,7 @@
   --color-primary: #e6e1d6;
   --color-secondary: #d4cec4;
   --color-tertiary: ##808080;
+  --color-link-background: #ddd0bb;
   --color-link: #0498c7;
 
   --font-xs: 1.2rem;
@@ -27,6 +28,7 @@
     --color-primary: #353535;
     --color-secondary: #4b4944;
     --color-tertiary: #d3d3d3;
+    --color-link-background: #404347;
   }
 }
 
