--- a/src/styles/ChatFooter.module.scss
+++ b/src/styles/ChatFooter.module.scss
@@ -30,44 +30,14 @@ $paddingVertical: 15px;
   }
 }
 
-.icon {
-  & path {
-    fill: var(--color-text);
-  }
+.actionWrapper {
+  grid-template-columns: none;
+  grid-template-rows: auto auto;
+  grid-gap: 10px;
 }
 
 .actionButtons {
   & button {
     padding: 0 6px;
-  }
-}
-
-.textarea {
-  display: block;
-  flex: 1;
-  resize: none;
-  border: none;
-  outline: none;
-  margin: 0;
-  font-family: inherit;
-  font-size: var(--font-m);
-  color: var(--color-text);
-  overflow-y: auto;
-  height: calc(var(--font-m) * 2);
-  box-sizing: border-box;
-  height: 32px;
-  max-height: 160px;
-  border-bottom: 7px solid transparent; // Simulates margin due to problems across browsers
-  padding: 6px 15px 0;
-  background-color: var(--color-secondary);
-  border-radius: 20px;
-
-  &:focus {
-    box-shadow: 0 0 0 1px lightsteelblue;
-  }
-
-  &::placeholder {
-    opacity: 0.7;
-    color: var(--color-tertiary);
   }
 }
