--- a/src/styles/Chat.module.scss
+++ b/src/styles/Chat.module.scss
@@ -16,3 +16,37 @@
 .fix {
   flex: 1 1 auto;
 }
+
+.header {
+  display: flex;
+  align-items: center;
+  padding: 0 20px;
+  height: 55px;
+  background-color: var(--color-primary);
+}
+
+.modal {
+  border-radius: 2px;
+  margin: 0 20px;
+  padding: 20px;
+  max-width: 500px;
+
+  & > p {
+    font-weight: var(--font-bold);
+  }
+}
+
+.modalButtons {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 20px;
+  padding: 10px 5px 0 0;
+
+  & > button {
+    color: var(--color-white);
+  }
+
+  & > button:first-child {
+    margin-right: 10px;
+  }
+}
