--- a/src/styles/TextInput.module.scss
+++ b/src/styles/TextInput.module.scss
@@ -9,7 +9,6 @@
   font-size: var(--font-m);
   color: var(--color-text);
   overflow-y: auto;
-  height: calc(var(--font-m) * 2);
   box-sizing: border-box;
   height: 32px;
   max-height: 160px;
@@ -24,6 +23,6 @@
 
   &::placeholder {
     opacity: 0.7;
-    color: var(--color-tertiary);
+    color: var(--color-);
   }
 }
