--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,9 +5,7 @@
   --color-text: #000000;
   --color-primary: #e6e1d6;
   --color-secondary: #d4cec4;
-  --color-tertiary: ##808080;
-  --color-link-background: #ddd0bb;
-  --color-link: #0498c7;
+  --color-tertiary: #539bf5;
 
   --font-xs: 1.2rem;
   --font-s: 1.4rem;
@@ -27,8 +25,6 @@
     --color-text: #fffcf2;
     --color-primary: #353535;
     --color-secondary: #4b4944;
-    --color-tertiary: #d3d3d3;
-    --color-link-background: #404347;
   }
 }
 
