--- a/src/styles/ChatContent.module.scss
+++ b/src/styles/ChatContent.module.scss
@@ -1,4 +1,5 @@
 .messagesWrapper {
+  position: relative;
   display: flex;
   flex-direction: column;
   flex: 1;
@@ -12,4 +13,11 @@
 
 .children {
   padding: 10px;
+}
+
+.loader {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
