--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,6 +7,8 @@
   --color-secondary: #d4cec4;
   --color-tertiary: #539bf5;
 
+  --color-question: #8338ec;
+
   --font-xs: 1.2rem;
   --font-s: 1.4rem;
   --font-m: 1.6rem;
