--- a/src/styles/ChatFooter.module.scss
+++ b/src/styles/ChatFooter.module.scss
@@ -35,7 +35,7 @@ $paddingVertical: 15px;
   }
 }
 
-.actionWrapper {
+.giphyWrapper {
   grid-template-columns: none;
   grid-template-rows: auto auto;
   grid-gap: 10px;
