--- a/src/styles/Loader.module.scss
+++ b/src/styles/Loader.module.scss
@@ -1,3 +1,10 @@
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 .loader {
   display: block;
   border: 10px solid var(--color-text);
