--- a/src/styles/Giphy.module.scss
+++ b/src/styles/Giphy.module.scss
@@ -1,14 +1,48 @@
+@import './breakpoints';
+
 .wrapper {
-  display: grid;
-  grid-gap: 10px;
+  position: absolute;
+  background-color: var(--color-primary);
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding: 15px 20px;
+  z-index: 10;
+
+  @include bp-tablet {
+    bottom: 60px;
+    width: auto;
+    left: 10px;
+    padding: 10px;
+    right: auto;
+    border-radius: 10px;
+  }
+}
+
+.error {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-55%, -60%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 .grid {
-  max-height: 180px;
-  overflow-y: visible;
-  overflow-x: hidden;
+  height: 300px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  overflow-y: scroll;
 }
 
 .searchFooter {
+  margin-top: 10px;
   display: flex;
+}
+
+.img {
+  width: 100%;
 }
