--- a/src/styles/TextInput.module.scss
+++ b/src/styles/TextInput.module.scss
@@ -25,4 +25,14 @@
     opacity: 0.7;
     color: var(--color-);
   }
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
+}
+
+.error {
+  &:focus {
+    box-shadow: 0 0 0 1px red;
+  }
 }
