--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;700&display=swap');
 
 :root {
+  --color-chat: #e8e8e4;
   --color-body: #eeeeee;
   --color-text: #000000;
   --color-primary: #e6e1d6;
@@ -23,7 +24,8 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --color-body: #222222;
+    --color-chat: #222222;
+    --color-body: #464646;
     --color-text: #fffcf2;
     --color-primary: #353535;
     --color-secondary: #4b4944;
