--- a/src/styles/MainTemplate.module.scss
+++ b/src/styles/MainTemplate.module.scss
@@ -4,10 +4,12 @@
   height: 100%;
   display: flex;
   flex-direction: column;
+  background-color: var(--color-chat);
   margin: 0 auto;
 
   @include bp-laptop {
     max-width: 75%;
-    padding: 50px 0 80px;
+    height: calc(100% - 130px);
+    margin-top: 50px;
   }
 }
