--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,13 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;700&display=swap');
 
-:root {
-  --color-chat: #e8e8e4;
-  --color-body: #eeeeee;
-  --color-text: #000000;
-  --color-primary: #e6e1d6;
-  --color-secondary: #d4cec4;
+html {
   --color-tertiary: #539bf5;
-
   --color-question: #8338ec;
 
   --font-xs: 1.2rem;
@@ -22,14 +16,20 @@
   --font-bold: 700;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --color-chat: #222222;
-    --color-body: #464646;
-    --color-text: #fffcf2;
-    --color-primary: #353535;
-    --color-secondary: #4b4944;
-  }
+html[data-theme='light'] {
+  --color-chat: #e1ded5;
+  --color-body: #e8e8e4;
+  --color-text: #110e0e;
+  --color-primary: #d6ce93;
+  --color-secondary: #d4cec4;
+}
+
+html[data-theme='dark'] {
+  --color-chat: #222222;
+  --color-body: #464646;
+  --color-text: #fffcf2;
+  --color-primary: #353535;
+  --color-secondary: #4b4944;
 }
 
 @supports (-webkit-overflow-scrolling: touch) {
